[package]
name = "solana_rust_app"
version = "0.1.0"
edition = "2018"

[dependencies]
# Add your dependencies here, for example:
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
# Add Solana dependencies
solana-client = "1.10.32"
solana-sdk = "1.10.32"
